// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay closed 1`] = `
<div
  className="Overlay__Div-sc-7f8d3g-0 ewOKTg"
  onClick={[Function]}
  opacity={0.2}
/>
`;

exports[`Overlay custom color 1`] = `
<div
  className="Overlay__Div-sc-7f8d3g-0 kYPzZF"
  onClick={[Function]}
  opacity={0.2}
/>
`;

exports[`Overlay custom duration 1`] = `
<div
  className="Overlay__Div-sc-7f8d3g-0 hBAKkk"
  onClick={[Function]}
  opacity={0.2}
/>
`;

exports[`Overlay custom opacity 1`] = `
<div
  className="Overlay__Div-sc-7f8d3g-0 fnzpby"
  onClick={[Function]}
  opacity={0.5}
/>
`;

exports[`Overlay default 1`] = `
<div
  className="Overlay__Div-sc-7f8d3g-0 gSUKEd"
  onClick={[Function]}
  opacity={0.2}
/>
`;
